[gd_scene load_steps=5 format=3 uid="uid://l1o2g3i4n5s6"]

[ext_resource type="Script" path="res://login_system.gd" id="1_1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.15, 0.25, 0.98)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0.9, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.2, 0.3, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.15, 0.4, 0.6, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.2, 0.5, 0.7, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.3, 1, 1, 1)

[node name="LoginSystem" type="CanvasLayer"]
script = ExtResource("1_1")
process_mode = 4

[node name="LoginPanel" type="Panel" parent="."]
visible = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
process_mode = 4

[node name="TitleLabel" type="Label" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "MATHQUEST"
horizontal_alignment = 1

[node name="UsernameLabel" type="Label" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Nome de Usu√°rio:"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
process_mode = 4
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.6, 0.8, 1, 0.7)
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
placeholder_text = "Digite seu nome"

[node name="LoginButton" type="Button" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
process_mode = 4
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
text = "ENTRAR"

